--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,103 +1,66 @@
-# ---
-# name: Bug report
-# about: 버그 발생 보고 및 해결 방안 기록
-# title: "[BUG] Bug Title"
-# labels: "\U0001F41E BugFix"
-# assignees: ''
-
-# ---
-
-# ### Description
-# ---
-# > 어떠한 이슈인지 설명해주세요
-
-# <br><br>
-
-# ### Reproducing
-# ---
-# > 오류가 발생하는 과정을 적어주세요
-
-# <br><br>
-
-# ### Screenshots (Optional)
-# ---
-# > 버그 발생 화면을 스크린샷으로 보여주세요
-
-# <br><br>
-
-# ### Files
-# ---
-# > 관련된 파일 목록들을 작성해주세요
-
-# <br><br>
-
-# ### Additional context(Optional)
-# ---
-# > 추가적으로 남길 코멘트를 적어주세요
-
-# <br><br>
-
 name: Bug Report
 description: File a bug report.
 title: "[Bug]: "
-labels: ["bugfix"]
+labels: ["🐞 BugFix"]
 projects: []
-assignees:
-  - jhssong
 body:
   - type: markdown
     attributes:
       value: |
         Thanks for taking the time to fill out this bug report!
-  - type: input
-    id: contact
-    attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
+
   - type: textarea
     id: what-happened
     attributes:
       label: What happened?
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
-      value: "A bug happened!"
     validations:
       required: true
-  - type: dropdown
-    id: version
+
+  - type: textarea
     attributes:
-      label: Version
-      description: What version of our software are you running?
-      options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
-      default: 0
+      label: Current Behavior
+      description: A concise description of what you're experiencing.
+      placeholder: Tell us what you see!
     validations:
       required: true
-  - type: dropdown
-    id: browsers
+
+  - type: textarea
     attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
+      label: Expected Behavior
+      description: A concise description of what you expected to happen.
+      placeholder: Tell us what you expected!
+    validations:
+      required: true
+
+  - type: textarea
+    attributes:
+      label: Steps To Reproduce
+      description: Steps to reproduce the behavior.
+      placeholder: |
+        1. In this environment...
+        1. With this config...
+        1. Run '...'
+        1. See error...
+    validations:
+      required: true
+
   - type: textarea
     id: logs
     attributes:
       label: Relevant log output
       description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
       render: shell
-  - type: checkboxes
-    id: terms
+    validatons:
+      required: false
+
+  - type: textarea
     attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com).
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
+      label: Anything else?
+      description: |
+        Links? References? Anything that will give us more context about the issue you are encountering!
+
+        Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+    validations:
+      required: false
