--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -14,6 +14,10 @@ body:
       label: Current Behavior
       description: Describe what is happening, including any error messages or unexpected behavior.
       placeholder: Tell us what you see!
+      value: |
+        - Description 1
+        - Description 2
+        - Description 3
     validations:
       required: true
 
@@ -22,6 +26,10 @@ body:
       label: Expected Behavior
       description: Describe what you expected to happen instead.
       placeholder: Tell us what you expected!
+      value: |
+        - Description 1
+        - Description 2
+        - Description 3
     validations:
       required: true
 
