--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -31,7 +31,7 @@ body:
         - [ ] TODO 2
         - [ ] TODO 3
     validations:
-      required: false
+      required: true
 
   - type: textarea
     attributes:
