Add ids in templates

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -10,6 +10,7 @@ body:
         Thanks for taking the time to fill out this bug report!
 
   - type: textarea
+    id: current-behavior
     attributes:
       label: Current Behavior
       description: Describe what is happening, including any error messages or unexpected behavior.
@@ -22,6 +23,7 @@ body:
       required: true
 
   - type: textarea
+    id: expected-behavior
     attributes:
       label: Expected Behavior
       description: Describe what you expected to happen instead.
@@ -34,6 +36,7 @@ body:
       required: true
 
   - type: textarea
+    id: reproduce
     attributes:
       label: Steps To Reproduce
       description: Provide a step-by-step guide to reproduce the issue.
@@ -55,6 +58,7 @@ body:
       required: false
 
   - type: textarea
+    id: additional-context
     attributes:
       label: Anything else?
       description: |
