--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -2,7 +2,6 @@ name: Feature Request
 description: Suggest a new feature, UI improvement, or documentation enhancement.
 title: "[Feat]: "
 labels: ["✨ Feature"]
-projects: ["jhssong/7"]
 body:
   - type: markdown
     attributes:
@@ -16,10 +15,6 @@ body:
       label: Feature Description
       description: Describe the feature in detail. What problem does it solve? How will it improve the project?
       placeholder: Explain the feature clearly.
-      value: |
-        - Description 1
-        - Description 2
-        - Description 3
     validations:
       required: true
 
@@ -28,7 +23,7 @@ body:
     attributes:
       label: Implementation Steps (TODO)
       description: Outline the steps required to implement this feature.
-      value: |
+      placeholder: |
         - [ ] TODO 1
         - [ ] TODO 2
         - [ ] TODO 3
