feat: Update description and placeholder on additional context section

--- a/src/templates/en/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/src/templates/en/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -27,7 +27,7 @@ body:
     id: additional-context
     attributes:
       label: 📋 Additional Context
-      description: Provide any additional information, links, or resources related to this feature request.
+      description: Add any related links or relevant information.
       placeholder: Include links to relevant discussions, documentation, or useful resources.
     validations:
       required: false
