--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "type": "module",
   "dependencies": {
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "chalk": "^5.6.2",
+    "figlet": "^1.10.0",
+    "inquirer": "^13.2.5",
+    "ora": "^9.3.0"
   },
   "scripts": {
     "start": "node src/app.js"
